--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,6 +6,7 @@ readme = "README.md"
 requires-python = ">=3.10"
 dependencies = [
     "bioio>=1.6.1",
+    "bioio-tifffile>=1.2.0",
     "dash-ag-grid>=31.3.1",
     "dash-bootstrap-components>=2.0.3",
     "matplotlib>=3.10.3",
