make package pip installable

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,13 @@ dependencies = [
     "tensorboardx>=2.6.4",
 ]
 
+[tool.uv]
+package = true
+
+[tool.setuptools.packages.find]
+where = ["."]
+include = ["pixel_patrol*"]
+
 [project.entry-points."pixel_patrol.widgets"]
 file_timestamp = "pixel_patrol.report.widgets.file_stats.file_timestamp:FileTimestampWidget"
 file_size = "pixel_patrol.report.widgets.file_stats.file_size:FileSizeWidget"
