--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,6 +16,7 @@ dependencies = [
     "pytest-mock>=3.14.1",
     "pyyaml>=6.0.2",
     "statsmodels>=0.14.4",
+    "tensorboard>=2.18.0",
     "tensorboardx>=2.6.4",
 ]
 
