--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,6 +7,7 @@ requires-python = ">=3.10"
 dependencies = [
     "bioio>=1.6.1",
     "bioio-tifffile>=1.2.0",
+    "click>=8.2.1",
     "dash-ag-grid>=31.3.1",
     "dash-bootstrap-components>=2.0.3",
     "matplotlib>=3.10.3",
@@ -26,6 +27,9 @@ package = true
 [tool.setuptools.packages.find]
 where = ["."]
 include = ["pixel_patrol*"]
+
+[project.scripts]
+pixel-patrol = "pixel_patrol.cli:cli"
 
 [project.entry-points."pixel_patrol.widgets"]
 file_timestamp = "pixel_patrol.report.widgets.file_stats.file_timestamp:FileTimestampWidget"
