github actions matrix stategy with conditions: When a particular branch is involved, we test on all OS, otherwise ubuntu for speed.

--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -10,7 +10,10 @@ on:
 
 jobs:
   build:
-    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        os: ${{ github.ref == 'refs/heads/dataset_histograms' || github.event.pull_request.base.ref == 'dataset_histograms' && fromJson('["ubuntu-latest", "windows-latest", "macos-latest"]') || fromJson('["ubuntu-latest"]') }}
+    runs-on: ${{ matrix.os }}
 
     steps:
     - uses: actions/checkout@v4
