--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -12,7 +12,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: ${{ github.ref == 'refs/heads/dataset_histograms' || github.event.pull_request.base.ref == 'dataset_histograms' && fromJson('["ubuntu-latest", "windows-latest", "macos-latest"]') || fromJson('["ubuntu-latest"]') }}
+        os: ${{ github.ref == 'refs/heads/main' || github.event.pull_request.base.ref == 'main' && fromJson('["ubuntu-latest", "windows-latest", "macos-latest"]') || fromJson('["ubuntu-latest"]') }}
     runs-on: ${{ matrix.os }}
 
     steps:
