--- a/pyproject.toml
+++ b/pyproject.toml
@@ -5,25 +5,22 @@ description = "Image prevalidation tool"
 readme = "README.md"
 requires-python = ">=3.12"
 dependencies = [
-    "bioio-imageio>=1.1.0",
-    "bioio>=1.6.1",
-    "bioio-ome-zarr>=1.2.0",
-    "bioio-tifffile>=1.2.0",
-    "bioio-imageio==1.1.0",
+    "bioio>=3.0.0",
+    "bioio-ome-zarr>=2.1.1",
+    "bioio-tifffile>=1.3.0",
+    "bioio-imageio==1.3.0",
     "click>=8.2.1",
-    "dash-ag-grid>=31.3.1",
+    "dash-ag-grid>=32.3.0",
     "dash-bootstrap-components>=2.0.3",
     "matplotlib>=3.10.3",
-    "opencv-python>=4.11.0.86",
-    "polars>=1.29.0",
-    "pyarrow>=20.0.0",
-    "pytest>=8.3.5",
-    "pytest-mock>=3.14.1",
+    "opencv-python>=4.11.0.88",
+    "polars>=1.31.0",
+    "pyarrow>=21.0.0",
     "pyyaml>=6.0.2",
     "statsmodels>=0.14.4",
     "tensorboard>=2.18.0",
     "tensorboardx>=2.6.4",
-    "zarr>=2.0.0,<3.0.0",
+    "zarr>=3.1.0",
 ]
 
 [tool.uv]
@@ -48,4 +45,5 @@ pixel_patrol_widget_builtins = "pixel_patrol.plugins:register_widget_plugins"
 [dependency-groups]
 dev = [
     "pytest>=8.3.5",
+    "pytest-mock>=3.14.1",
 ]
