--- a/examples/minimal-extension/pyproject.toml
+++ b/examples/minimal-extension/pyproject.toml
@@ -16,13 +16,13 @@ package = true
 packages = ["src/my_pixel_patrol_extension"]
 
 [project.entry-points."pixel_patrol.loader_plugins"]
-traxel_patrol_loaders = "my_pixel_patrol_extension.plugin_registry:register_loader_plugins"
+my_extension_loaders = "my_pixel_patrol_extension.plugin_registry:register_loader_plugins"
 
 [project.entry-points."pixel_patrol.processor_plugins"]
-traxel_patrol_widgets = "my_pixel_patrol_extension.plugin_registry:register_processor_plugins"
+my_extension_processors = "my_pixel_patrol_extension.plugin_registry:register_processor_plugins"
 
 [project.entry-points."pixel_patrol.widget_plugins"]
-traxel_patrol_widgets = "my_pixel_patrol_extension.plugin_registry:register_widget_plugins"
+my_extension_widgets = "my_pixel_patrol_extension.plugin_registry:register_widget_plugins"
 
 [tool.uv.sources]
 pixel-patrol-base = { path = "../../packages/pixel-patrol-base" }
