--- a/.github/workflows/python-tests.yml
+++ b/.github/workflows/python-tests.yml
@@ -9,15 +9,20 @@ on:
       - '**'
 
 jobs:
-  test-pixel-patrol-base:
-    name: Test pixel-patrol-base
+  test-packages:
+    name: Test Python Packages
     strategy:
       matrix:
-        os: ${{ (github.ref == 'refs/heads/main' || (github.event_name == 'pull_request' && github.event.pull_request.base.ref == 'main')) && fromJson('["ubuntu-latest", "windows-latest", "macos-latest"]') || fromJson('["ubuntu-latest"]') }}
+        os:
+          - ubuntu-latest
+        package:
+          - pixel-patrol-base
+          - pixel-patrol-loader-bioio
+          - pixel-patrol-loader-zarr
     runs-on: ${{ matrix.os }}
     defaults:
       run:
-        working-directory: packages/pixel-patrol-base
+        working-directory: packages/${{ matrix.package }}
     steps:
       - uses: actions/checkout@v4
 
@@ -31,41 +36,8 @@ jobs:
           pip install uv
           uv venv
 
-      - name: Install base (editable)
-        run: |
-          uv pip install -e .
+      - name: Install package dependencies
+        run: uv pip install -e .
 
-      - name: Run tests (base)
-        run: |
-          uv run pytest
-
-  test-pixel-patrol:
-    name: Test pixel-patrol (depends on base)
-    needs: test-pixel-patrol-base
-    strategy:
-      matrix:
-        os: ${{ github.ref == 'refs/heads/main' || (github.event.pull_request.base.ref == 'main') && fromJson('["ubuntu-latest","windows-latest","macos-latest"]') || fromJson('["ubuntu-latest"]') }}
-    runs-on: ${{ matrix.os }}
-    defaults:
-      run:
-        working-directory: packages/pixel-patrol
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Python
-        uses: actions/setup-python@v5
-        with:
-          python-version: '3.12'
-
-      - name: Install uv and create venv
-        run: |
-          pip install uv
-          uv venv
-
-      - name: Install pixel-patrol (editable)
-        run: |
-          uv pip install -e .
-
-      - name: Run tests (app)
-        run: |
-          uv run pytest
+      - name: Run tests
+        run: uv run pytest
