--- a/packages/pixel-patrol-base/pyproject.toml
+++ b/packages/pixel-patrol-base/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
 name = "pixel-patrol-base"
-version = "0.1.1"
+version = "0.1.2"
 description = "Image prevalidation tool"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
     "click>=8.2.1",
     "dash-ag-grid>=32.3.0",
     "dash-bootstrap-components>=2.0.3",
-    "matplotlib>=3.10.3",
+    "matplotlib>=3.10.3", # TODO: Are we sure we need it in base?
     "polars>=1.31.0",
     "pyarrow>=21.0.0",
     "pyyaml>=6.0.2",
