--- a/packages/pixel-patrol-image/pyproject.toml
+++ b/packages/pixel-patrol-image/pyproject.toml
@@ -1,11 +1,11 @@
 [project]
 name = "pixel-patrol-image"
-version = "0.1.1"
+version = "0.1.2"
 description = "Image prevalidation tool"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
-    "pixel-patrol-base>=0.1.1",
+    "pixel-patrol-base==0.1.2",
     "opencv-python-headless>=4.8",
 ]
 
