--- a/packages/pixel-patrol/pyproject.toml
+++ b/packages/pixel-patrol/pyproject.toml
@@ -1,13 +1,13 @@
 [project]
 name = "pixel-patrol"
-version = "0.3.1"
+version = "0.3.2"
 description = "Image prevalidation tool - PixelPatrol and its add-ons packages"
 readme = "README.md"
-requires-python = ">=3.12"
+requires-python = ">=3.11"
 dependencies = [
-    "pixel-patrol-base>=0.1.1",
-    "pixel-patrol-image>=0.1.1",
-    "pixel-patrol-loader-bio>=0.1.1",
+    "pixel-patrol-base==0.1.2",
+    "pixel-patrol-image==0.1.2",
+    "pixel-patrol-loader-bio==0.1.2",
 ]
 
 [tool.uv]
