--- a/packages/pixel-patrol-image/pyproject.toml
+++ b/packages/pixel-patrol-image/pyproject.toml
@@ -3,6 +3,7 @@ name = "pixel-patrol-image"
 version = "0.1.2"
 description = "Image prevalidation tool"
 readme = "README.md"
+license = { file = "LICENSE" }
 requires-python = ">=3.11"
 dependencies = [
     "pixel-patrol-base==0.1.2",
@@ -11,6 +12,9 @@ dependencies = [
 
 [tool.uv]
 package = true
+
+[tool.setuptools]
+license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_LICENSES.md"]
 
 [tool.hatch.build.targets.wheel]
 packages = ["src/pixel_patrol_image"]
