--- a/packages/pixel-patrol/pyproject.toml
+++ b/packages/pixel-patrol/pyproject.toml
@@ -3,6 +3,7 @@ name = "pixel-patrol"
 version = "0.3.2"
 description = "Image prevalidation tool - PixelPatrol and its add-ons packages"
 readme = "README.md"
+license = { file = "LICENSE" }
 requires-python = ">=3.11"
 dependencies = [
     "pixel-patrol-base==0.1.2",
@@ -12,6 +13,9 @@ dependencies = [
 
 [tool.uv]
 package = true
+
+[tool.setuptools]
+license-files = ["LICENSE", "NOTICE", "THIRD_PARTY_LICENSES.md"]
 
 [dependency-groups]
 dev = [
