--- a/packages/pixel-patrol-image/pyproject.toml
+++ b/packages/pixel-patrol-image/pyproject.toml
@@ -1,12 +1,12 @@
 [project]
 name = "pixel-patrol-image"
-version = "0.1.2"
+version = "0.1.3"
 description = "Image prevalidation tool"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.11"
 dependencies = [
-    "pixel-patrol-base==0.1.2",
+    "pixel-patrol-base>=0.1.2",
     "opencv-python-headless>=4.8",
 ]
 
