--- a/packages/pixel-patrol/pyproject.toml
+++ b/packages/pixel-patrol/pyproject.toml
@@ -1,14 +1,14 @@
 [project]
 name = "pixel-patrol"
-version = "0.3.2"
+version = "0.3.3"
 description = "Image prevalidation tool - PixelPatrol and its add-ons packages"
 readme = "README.md"
 license = { file = "LICENSE" }
 requires-python = ">=3.11"
 dependencies = [
-    "pixel-patrol-base==0.1.2",
-    "pixel-patrol-image==0.1.2",
-    "pixel-patrol-loader-bio==0.1.2",
+    "pixel-patrol-base==0.1.3",
+    "pixel-patrol-image>=0.1.2",
+    "pixel-patrol-loader-bio>=0.1.2",
 ]
 
 [tool.uv]
