--- a/packages/pixel-patrol-base/pyproject.toml
+++ b/packages/pixel-patrol-base/pyproject.toml
@@ -18,6 +18,7 @@ dependencies = [
     "tensorboardx>=2.6.4", # TODO: Are we sure we want it in base?
     "dask>=2025.5.1",
     "tqdm>=4.67.1",
+    "yaspin>=3.4.0",
 ]
 
 [tool.uv]
